<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ECE1E1"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_edit_app_anotacoes"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.089" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="44dp"
        android:layout_height="42dp"
        app:srcCompat="?android:attr/actionModeFindDrawable"
        tools:layout_editor_absoluteX="183dp"
        tools:layout_editor_absoluteY="16dp" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/txt_edit_titulo"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_editor_absoluteX="103dp" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="214dp"
        android:layout_height="124dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/txt_edit_conteudo"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
        tools:layout_editor_absoluteX="103dp" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/txt_edit_lembrete"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2"
        tools:layout_editor_absoluteX="103dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="116dp"
        android:backgroundTint="@color/cor_button_criar"
        android:text="@string/txt_edit_criar"
        app:icon="@android:drawable/ic_input_add"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.28"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/cor_button_excluir"
        android:text="@string/txt_edit_excluir"
        app:icon="@android:drawable/ic_delete"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3"
        tools:layout_editor_absoluteX="268dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/cor_button_salvar"
        android:text="@string/txt_edit_salvar"
        app:icon="@android:drawable/ic_menu_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="464dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/black"
        android:text="@string/txt_edit_inserir_imagem"
        app:icon="@android:drawable/ic_menu_camera"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>